# perlin

./: .gitignore  Cargo.toml  README.md
docs/: index.html
docs/assets/: imtools_bg.6a53ee84.wasm  imtools_bg.7e65efd7.wasm  index.7313cb3a.js  index.d51ff530.css
examples/: create_image.rs
imggen/: Cargo.toml
imggen/examples/: create_image.rs
imggen/src/: cmaps.rs  imggen.rs  lib.rs  wasm.rs
imtools/: .gitignore  Cargo.toml
imtools/examples/: create_image.rs
imtools/src/: as_flat_slice.rs  cmaps.rs  image_types.rs  lib.rs  perlin.rs  wasm.rs
imtools/src/cmaps/: mod.rs
perlinrs/: Cargo.toml
perlinrs-web/: Cargo.toml
perlinrs-web/src/: lib.rs
python/: pyproject.toml
python/tests/: test_imtools.py
rust/: Cargo.toml
site/: index.html
site/assets/: index.63941783.js  index.c4f4cc38.css
src/: lib.rs
wasm/: Cargo.toml
webapp/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
webapp/src/: Controller.tsx  Parameters.tsx  main.ts  main.tsx
webapp/src/Components/: App.tsx  Controls.tsx  ImageDisplay.tsx  Layout.tsx  Slider.tsx  Slider2D.tsx  Slider2DDemo.tsx  ThreeImageDisplay.tsx
