[package]
name = "imggen-rs"
version = "0.1.0"
edition = "2021"
license = "CC-BY-NC-SA-4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "*"

[dev-dependencies]
image = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "*"
js-sys = "*"

[lib]
crate-type = ['cdylib', 'rlib']